// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SaveButton should match snapshot, extraClasses 1`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47 some-class"
    data-testid="saveSetting"
    id="saveSetting"
    type="submit"
  >
    <span
      class="_button__label_doayp_24"
    >
      Save
    </span>
  </button>
</div>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 1`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    data-testid="saveSetting"
    id="saveSetting"
    type="submit"
  >
    <span
      class="_button__label_doayp_24"
    >
      Save
    </span>
  </button>
</div>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 2`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    data-testid="saveSetting"
    id="saveSetting"
    type="submit"
  >
    <span
      class="_button__label_doayp_24"
    >
      Go
    </span>
  </button>
</div>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 1`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    data-testid="saveSetting"
    disabled=""
    id="saveSetting"
    type="submit"
  >
    <span
      aria-hidden="true"
      class="_button__icon-slot_doayp_27"
    >
      <span
        aria-label="Loading"
        class="_spinner_3elm7_10"
        role="status"
        style="width: 16px; height: 16px; --spinner-stroke-width: 2px;"
      />
    </span>
    <span
      class="_button__label_doayp_24"
    >
      Saving
    </span>
  </button>
</div>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 2`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    data-testid="saveSetting"
    disabled=""
    id="saveSetting"
    type="submit"
  >
    <span
      aria-hidden="true"
      class="_button__icon-slot_doayp_27"
    >
      <span
        aria-label="Loading"
        class="_spinner_3elm7_10"
        role="status"
        style="width: 16px; height: 16px; --spinner-stroke-width: 2px;"
      />
    </span>
    <span
      class="_button__label_doayp_24"
    >
      Saving Config...
    </span>
  </button>
</div>
`;
